Populated bare C# GUI with the requisite elements to use all funcitons.

--- a/M18AnalyzerMain.resx
+++ b/M18AnalyzerMain.resx
@@ -121,6 +121,128 @@
     <value>9, 21</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="lblAboutTitle.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAH0AAAAkCAYAAACkATUaAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAABsvSURBVHhexVx3XJTH1h4BkQ4iRRBEqghKIoI1GguJveRq
+        xMQSazDGwrUktphi9CbGEs2NvSWWRI2FqBELGlRQQEEBhWVh6b33urzfeQaWu25epMR7vz+eH7D7zpmz
+        88ypMwurfPK0R/mdwF4VD0LsKoIf2rcLNLY84E7v2uQUI3lxMavLzGJ1WdkNP3NymCCvZ4IgvIjaWs2K
+        +8E9ywPvOYrKfDmgK8Y5l98Lcq54GOImLy3Vl1dXM3lFRQPKy5lAf/9lXoJEImFfffEFkyUksN/OnmMp
+        ycmstraW5eXlsWLSv6amxiAqMnJ2aEjovCcRT2ZFhEeIYWZwUNBHiTLZO5BZX1/fBPx988YNlhCfwLKz
+        s1nQvfvs90t+9Hc8CwsJwfvqN/z9ex89fHh6wK2ATw7s2//ltm++/fena9ZcnD9vftC0qVPDxo8bFzFy
+        xAjZsKFD098cNiwFwO9eo0bFTZww4ZH3dO8wn0U+dzdt3Pjrrh07dpw6cWJD0P37HwfcvPVmeVm5flpq
+        Kp8vMyODxUul7Bbpk0G/QzeW/sH8+/F2PYVk98ElSX0HlrYHGCs1sxRyv/76AoRyNH54QS5n2AjywkIm
+        LyriP/F65YOQBfG2jkKiq3sFyShrIzBveVLfQVWynr3rkwa9IVRFRk+tpU1WI0vkqI6TsprcvAYdVKBM
+        +nV/f3btylX2IDi46f39e/du7cCYAGh30hJFp46atHpM2PTZpivKsptIv36Dy8/KzGSJCTJ29fIVW/8/
+        rvkuWrjw9sSx4xL7e3jUmpmYchnKUCNoqmsI2pqdBB2aR1dL+wXgNS2aW0NNjeunOt7R3kHwGj4ie9bM
+        mWGXL19em5qSYldYUED6XGcZ6elcN5Y0YtSTZ/SwVKeLEKfduV3AWMhIdPcsry8utZeXV7C6/IL/gHZ7
+        E3Jz+cTZ69efivqb88bpGAuxTE2QGpoKVaGPZtSlprGaWAmrJZRFP2MFjXOpQpn0OwG32cmff2Z+ly7x
+        95KTkiYaGxvzhbU0Mxe6EjFiMOtszMnftWvX6tjYWBYYGMhiY2Ka5rh39y6rJI8TGhr6ju8K33vOjk71
+        OkRkRw0NQZ0+t6GOrmBOcmy6WQn2Nj0Ehx62gpOdvdCTSGs17Bz4GIy1624jWFtYCsaGhoJmB3VBrUMH
+        QUujo+Bkby8c2L//l+D797sVEPnQjaWMGRcq6aQnyBx6Cwk9erYb8d3shTgTc6HkwsXZ1XHxrPJxBKsM
+        fcSqnkSy+rq6psVohGnKyLcyYtW0/t68ts6C1NhSSHBwFaqePJ1Wl5HJasil1kvjWS4hp/FDqkKZdHKH
+        7MzpX9jjR49gpZ5DhgypgLX1cnDiZIgBiwzSezk6CZGRkWNBNjyFwn0CEeHhjit9fe8Yd+7MLdBQT4+P
+        dSayHG3tuAxVua8KkO/s4Mjn0KWNiflHDB+enZuT0x+6sZTRRLqmriCzdxESbJzaDyIhhoTnff2vsxBc
+        X1HJ6qtrWH1ZOW2AcFb5MIQ2QRirfvaclflfnxJv1k2IN+9B40RktRY0p7SzhZBAuitIryOyq4n4xMRE
+        lleQ/wLZCiiTfotIv09Wef7sb3Nee+31CiwQyBRbTAVgZR3V1IVRI0YkV1VVGajKz8zMnOLp4ckXG5sD
+        RMMixWT9NwHSMbeDjS3XxdPDo6heLrd5daST1cUyTSHl7dHS+qpqXSRyteRua9MzmLykhMnLyvhPLErh
+        3v17Ypi6uJy2QIX0WiJdTqQXJCUxKaEgX5z0fHp95/btPN5SgjN6zcpVfkYGBtylcwvvIb6ICnDS1dWF
+        WTNnBZw8/jP79dTpJtmpqalvvebmVsc3D8mC1YnJ+F8C5Dv2sOPEk6vf8Qot3VmIMzITpGYWQm1axptN
+        i0yJHMhQbAC8lj51RlgsSKeNIiqrtVC1dJJfm5TMM+ZMQk5urml2ZtbgnJycXjnZOU5ZmVl9iZQxV69c
+        XUUJ1akpEybGOZIbxGJYmppxlyi2aKqws+7Ox5w6cXInPk9RY3JK0B42dFgs3nNpwVuoghNDG6Q5ODX+
+        bG9YgMXrUx7hNXLUs1dHOmDbi1y8hlC4/8D62qQUVhn0gFU9Cmf1VA41LgqTFxT1ibdzFOL0u/CNIiqn
+        tVAhXcjOYclRUSwwKIhR1sq2bdu2GwRYW3YTuhO6UWJmbtxF0NfWEXS0tQX1DmqCiVFnWlB7DrHFUoUD
+        AYkckjiK29PwmRDLUer97ufni/l6dLPmBImNFwMIsTQ1p6xdXTAlfboYGQmdDV+EsYGhYEYJpjYlZ1Zd
+        LWiMo2BnYyMqTwwIL5Dt4uSc0XbSaaFFXycgKYuhbDrTZ/EdTnBJKZNT9l5FmTSRQjV7Liu56PcxErgE
+        a4fmZb1kjhegQrqcvEkllW2VdXyTqc2bNzcYJJhSXO1CC4efFkQYLLUXWbUTLbbYArWEzkRAH1fX+ksX
+        Lr5OpRgrR0+APi+VSaENSWDrPAYA72Kkpy9YmJsL48eMDR42aPDh0V5v7Xx36rSNs2fO+mL2rFmbZ0z3
+        3kXv7X1jwMAfRnt5XUNyaNalCw8zYjLFANKxBn1cXFPbRjotcrwFJV/dHcWJIXct0TQQktwH5cvLy23k
+        paWsjjLo2rR0DiR32f/8px+8Ac/aVcc3It7StuH3lshXIb02OYWXiCCgurra2bOve4UeWTUWVtlVii1K
+        a4Hx2Eiz3ns/jubRzM7KYglSKUtISPB0c+1da6ir12oXDCKQ1Xc1N49f4uPjkZQoY+9P92ZTJ09hSz9a
+        wj5ZtZp9sno1812+nM2b8wEbMXQYu+Hvzw7s2z+LSjQ5SsrWzgVvgtp/0qSJT1pPOhEtI1Jldr2oPLNr
+        lpB48+6CRN9IqAgOXoDFR5OmvgqZPO+O6aeMGJ0q6aAtJJAcsfF8QzW3qVTxIulTBarLJQ8fMv9bN9nF
+        ixemWFlYCNbkCsUWob1AbQzSN6xb9ws+X1RkJJGzim3+6qt3u1tbc9crNk4MFpRHWFta1h8+dGjI8SNH
+        WVhYGJv2zj/YhDFj2cK589iyJR+zFUuXso8Xf8QmT5jIfBYuoqpExkoolIx9e/SfmmpqrbZ2PAe9/7V1
+        677Wk07uWGpiKWTOW1SV3H9obbyptfhzRMRzEp7/zfYfsSg1ZH31je6v6mnk5DhzS0HapZvoWGwmqbm1
+        kPH+B3KSU8+9ishzTVAmPeLJuwJZXUVjQ+b4sWNbtTp1EmzJlYstQnvhSJYF77Fn956N8XHx7MRPP7MP
+        Fy5ky5cunWuJTWZhKTpOFfAYaJ68NWJkGPQtJa/46Zo1bNjgIWzlCl+qLnawHd99x3yXLWf0DHPt2Yvt
+        2rGDf7by8jIDNxfXBCPyKq3xXPAGCG0IC9K4uIltcu8oyQq27QzOWfPpg9gOnUTHwBPgubTJUyT1lVX6
+        DS3YIq5s0YHD32FDcEtWGQeAwMS+HvnFJ08HUB1fG2/WXfS5JiiRXv04YkZNTg6rbmwErV2z5iZ2dnuz
+        XTFggZHEwa1K46TjME8IeZbPNmxgZEEzbLp3F6zMLXh3TGy8MqBXZ4rlffu4ZcdL4+1CQ0KYm6srGz3K
+        i+RtZIcPHmL7ftzLSR/k4cl62tmz7779ljeTZrw7/bQG68AzejHZqujVaOU+iz68DZ1bTzq5djRfio+d
+        +LHycdgS/C6zdxV9TmpswS2W4vggTFKbSvG8slotY+784BhSFhtDdZzMzkWI7aAlZHjPDCm/dfszSUfd
+        hvxB5bkXoES6EP3cu1CWyE6eOMGCgoJ0xo4ZI9FUU//bMVwZiMEGurpCr17OVWSZNvhsFRUVPHsvyM93
+        6NO7TzGaNq5OPUXHqwK6GRsYCJ79+sVt/XrLu+PHjHGeOG6c+ZavNludPnnK6ufjP1lt+HSt1fA3hpq9
+        MXCQ85LFH82cPGlSCNqsvEJoYUPTRuEbA4R7eHiU1tTUerSNdFpgEJb/3c7dNYnJnnGd9Hn8xut/fdZZ
+        iNXQEopPnNiMSYC6vPy+CTYODaWaGOm0gZDg5f/ww7qSX899KFHXpoSOcgeV516AEum1EU+9KzMzWWFR
+        EQsJCRmlaH+2BMTV1tbnIAmHHPPnzn1SUFCgFUnxPL3xEAO4cP78d5DZmYhEBt8SKbB2bCQ9HR3ek+9h
+        ZV1Hr+U7OzoV9Ondu9DVxbXQycGxkF7LpTBVo0cbDg0kyHWkcWIyAcRvEI6GE/R5a5RXWUZ6+jCFnm0i
+        PZZIyV6+8nxddk7X5OEjkiXqOqINFlgtPEHmAp9gxUSll68sg/UmdH/xWQ6SjXgeq6FHCeDDXoX7Ds6R
+        aNGmUmTxzUGJ9KrH4d51eQ2napkZmSM3bdgY8M2Wrae3b/v2F3KLf8H2bdtOHjpwcC/Fy8zO+gatCgNw
+        21jEfT/+uA/zUIXAKisrm0gHtm/fftiY6mGclCG+g1QxWcoASZCNsIHE04Q2rBHpBL3MjLs09BjMu/Jn
+        kIWLyQDwGdB5M6H4jVM41PGzZ84MSEtN7QHdampquI5tJF1NyF7qy2vwnE82nOLxWYR0PIvSjeJzaV1W
+        th2ez169xr/ZkECeQaJtKMjcXq+lZ9XLrl1fhLnaRHp4hHdtVjarIndbI5e/QMRLoE9ZsQzW25owgMXv
+        1LGj8NPx48tLS0r4OTzkhIWEMkqQWBVVKVVVVXjN9pfTp/98vY8bbwaJyRKDYuPhpzKU33sZyFPwhG3m
+        e+8L8QkJmx+FhnZAH0Fx+idvXJc2kq4OSw9EGVZy5uyiOCMTfrom9jxcP5I9is/egryOpbwxMk3SAZ5B
+        vL7HhshestwfSpWcO7++zaQ/eepdR5VCLSVzFbU1vKwpLytjZZQVKwCiKui1RmKYTCYbCYuCNbVEOha9
+        i4Gh8Lrba8K9e/eGX71yhQXcusXloHbGhQX63fTUiZObF/v4XJowfkIqLFhxdPq/ADxBd/IuHn3dhXlz
+        54b9a8vWTXl5eZa52Tn8kgh0BdpO+lLfQByV1uXkWcuc3SridI3FYzS9BiILdu3xJZc9TGpKGW8XIshG
+        hHRrRyFWW18oOnCI5wClFy593i7S0XunZK6CSsRiIleVdPydTyEA599om166cHFxR8pTsFgtWRLctAZ9
+        nrdHjkoiHXUUCwhIJXEs4MbNOW97eZUqcgVtir3wDK1x7wqLxsZThdjzzQEyMB+sXaHHsDeGFmekpQ9Q
+        1rftpC9ZHohDFAzOXPzRXZ6Ni7jshsRMXcjZuPF86cXLW7ABIEP1OVh5nJE5NklN9bPnfSG39KJf+0jH
+        wU6clFWmpLISEE7kK1s53BusvLDxgOTrzZtPYWFeFicVQLKHMLBwwYIAWA3qasUinvj5xI6O5PYhy542
+        EJIoTlgrNhKegzdA/EcoQH9cAfyNjYNeA55raWMqoCAfCR90mjZtWjrp2VWhb7ssXXFEWnrp8qecTPTR
+        VZ8nN44mTPKQEVWpoyeWS426kkcQSfoaN0f6ezOjSKYm5JJ7bzfpuERRGyNh1WlprJRIL6cYX03JVp2S
+        e2uE2qQJE6UgsjVdLSxkxw5qwvFjx7elUBhRxPNzZ8+tx8LqaWkLrj2dRceqAvOhc4f8wMgQBykm9RSP
+        KwB7G5tKgLxPpY2VdaWddfcKCj/yTpqaPBtv6axfGdAZGwb6nTt79kvFZ2876ctWBvL7bkR85ZPI4VKL
+        blSXE6FiY0gmOndSAzP+u+gzJBcbp/Dg4S0Kpf4u6Zz4WAmrSUtnJSXF7Pnz57jJwp5GRHBEPnnCZPEJ
+        9v3d+xUZ6Oi2aEGwGJR2KJdI1gToiLtwlBWPc3Rw4LdTQAbChNh4ZeB0zLyLiaCvqyeMfHO4/xebNn1w
+        7do1jz3f77amvMCWSkG7rKwsOwo/dvHx8Xa+y5dbHjt61HXTxo2fW1t2y9DT1uZepzVzAfA6IN3Hx+dm
+        MZWzT+mzt530FasCccO1Kvo5brlqpk36R1ws6yiexQOK7huN/8t7BGkXS0FiaEwlV8T4V0k6UAfiKXZn
+        5ubyCxMK4O5a4J9/zjGhxQeZYoulDJBuqKcvuPXpI1y7etUVV6sQJma+PzMQC9pawgFYeGey7q++/HLq
+        Zb/f2b9372YpKSn8Vq5q+Yc5cMPnxjV/dvvmLRYVGeVEGzQfp2UtbVQF4OY7aWgI48eNT7t4/oLJ/r37
+        2kl6fj766PxSRM6GjUdjOmpTTBYpxVoChQCJmo6QPHREZk1Skgn69K+S9OrYOFZPBCsvpAJHDh3ijZTW
+        9OYdbG0bmjIfzH2Wm5fbsYZCRVFh4XBrKyt+9t0WArjVLfrwIHSgRJJ9u3UrI4tmp0+dYmWUhyjriD7A
+        2k8+wU1a9v2OnezCud/YO5OnXOiortGqPATAnOhMTpwwIe13Pz+TQwcPto90eUEBqwp/wmokUlbmf2OG
+        1MBUSED3rBlrbg7YKM8pEcxdt8FP+cO2k/TpqqQLlMk/ffiQ3bpzh99OBcjC+VXglb6+l0BAazJkkIpn
+        N3/x5U/Qr4jc5KEDB3gsb2uGjXBy8sTJeQX5BeyPK1fZgg/msrmzZrMlPovZsSNH+QHOl5s28Z77nJmz
+        MA87uG8f+3HPHnb2zBnW28UlABcqWjtv00ZbuPBWDnnoR2FhnPSQNpJ+l99/o0SJk1Qn75Y4cEh+LG7U
+        ipRuzQIXIrs7CejSlf5+2YfLarwz/qpIr0+QsRQqp57FxDAJlWlAUmIiS01O7uI1yiulE64I06KILZYy
+        cOnCgNz7gf37P4uOimIXfvuNrVi+/DBifGtbuApoU0J27syZNYmyBPbZ+g3M1aknP1mbNuUdtpH+BiaN
+        G8/c3V5jttY27Mwvv7Bt33zD7tJm9bvkNwfXp9GEEZMtCgo7IP3Avv07sLaoPNpHOtz743BWSwsIQTkr
+        11xotjvXDLBBJLpGgszVrV5eUtabk96IV0F6dUwsv2evLFeBvLzcnrbW1vwKUkukw8pR97o4UWkpkbz1
+        hBJBnIAtmL/gihYR2Fo3C8A6cU/Nw71fzqXzFz13bd/OPF/vy/4xeQqbN3sO273re0YJHVs0fwEbP3oM
+        G9DPk/1x9Sr7/dIlww9mzf7UzNS0Eqd8rdmoAHRH/O9mYSFQ3vC24vO3j/S8PFYVGcWvQkFI2ZWrS2M1
+        tYV4ixZIUgJIx0bJXOhzE3fouOdorP9fBelCYhLLoqz9blAQC3nwoAkSsvqb168vwHUj1MAtxWOUV0iE
+        Bg8YmEm6GSLZOnzgIJs/b/5F3ERBNi42Tgx2BBzE6FIGbmXVrXZQ//53Bnp4/kBZ/LLJEybOX71y5eLV
+        q1YtnjplykKy/sVvDBy0c9TwETc9+rmX4MsLILwtV7HwLKx8+bJlAVhXNKSA9pGOmE6JHOI6vtRAv7vJ
+        XNwq4/RM+HOi41WA9i1KtZIz576CQoqLFq+O9GSWGRXNAsgtBt2/34QY2gjr1q49AitFOSO2WMoA6Uji
+        Fsyff7+0uFgNPfY7t2+z9evXf49DlbZYugIICWj9Gujo8fINQBWBrB4Aufgbr+tpaZF30OHWDbSmSsDm
+        gl5Genr84kRiYiI/+y+hMhtoH+lUAsHS66v+8wXBjLnzH+JS5MvuvimDN2vISipCQoZWPnrcdLftVZH+
+        MvdOWXgQLKA1pCuSuB9279mRnZXD0JiBjPDHj2fhJAudtLYmcwDkAhgLKP5WhvLrYjKaAywcmwp6nz59
+        isdydCMVaLelg6hqSpJwMwZCi44e+xyk4xq06HglNHXhpnrH0FgNnsA1JnHAK7F0Qt7zGBZBHimaNqgC
+        mRmZNuQyi3BVqTWLiSNNLB5l/h8q9GuE+ry5c5/iPSxyW4n5bwA64AIHwg70OnLkyM8qOnO0n/TQMFZD
+        cVMhqEaaMEqi31mQmhAJLdxnbyCdCfk7d+7BWFynqm886wX+NunSeFaHn+Q9yioqWXlZOQdkR4RHjEbr
+        E65TbOGUgUXE7VYnJychOSlpEDpaOLBR6JmVmTnCva87/yoUMmq41P8P8nFZE0BYgC7GZOWXL1/epdBT
+        FUT6WCKdyi17uGXE42bQA3fflGJ6eAR3obVEPL4aLC8oNErxGpOMK08N1i4iAyA5UjMrQaJlIFQ/i5kE
+        JfCVp8bbshz/IR03Z0RkKECbS5R0fE2ZdFIkhsrw/+PaMiwMDjlA0MuAGIpTuInjxknKyss1nj17xuIo
+        pis6ZzWkM9X8/WZ4e6dBJu68Qy4sv7UZdnug0A2bDM0lxZcUzUxMhI98FofHxsQOVf3cymBJI70eI4uO
+        p8WTGpo1DyNz/nXkzA+X3KfsvUNl2COezPE+fOOJU96Wb05H0zNo1ojKAEgO5pN5Diisy861qsvCPy54
+        8SvFxad/3Yy54nTIc4jJUIBkYZNJTbvh5sx7OFoF4XIiviJWwm5dv86uUsnjf+0aR+TTp2z16lV+WCB9
+        LR1+SNIS8Cxlv4HQC/12HNwozuPxxX/ce6+rqzPa9+PebW97eRWCAFx9QvIHL2FhZtZ0dAuikBgqA68p
+        Q+x9Rc6ADcX79p20+QbDbV/o2NvFRVi+dNkNKu9mJMpkTEKfXfG1ZDGwVO8Zj+O6WgqJvVwFmbPLSxGr
+        ayBkr9sYVJeb36HqaRTP3isePOTABijx+31uvIsrWaC96HiOnuQx9I2E/G07rkIB/qXDooa8QIHSS35b
+        Y42pEqBET1SGEuKtewgy934Czf8e/vNFTYKMCSmprJji+ebPv2CrVq1m69eu49iy+etOM99/P6J3Lxdh
+        6KDBJUMGDCx9GQZ59i9z691bOHv27BfI2tFzR0crLDQURDN0uMjts/S0dBbxOBxWbxgcHDzHd8WKyxPG
+        jEnp+9prchCDjaOAGnkONIXwDwaQlePbLcowoI2iq63D43JHShSVxwKGFJoGDxhQOWnc+IQliz/64+7d
+        wA8p5NiiKkHHEbpFU9WiOD4WAys5e75/wY7dY4sOHx9adPDom83i0LFh+dt2ji2//edAfFOlLjuH1VE2
+        K8/PJ2svaPhvE8XFusXHT4wq3LN3JD0vLodQsG3nuOro5/zelhgoQeyR/+2O8UX7D4uOV0bhv/cPLzpy
+        fExtdo4pwkQd8oPiElZN8TyKLJuybIaGSiM6RISH20VHRfV8/vy5Lblru5chOjoaz/YqKyvTLSXZijoX
+        gJ741x4gHT//vHOHPYuOJutPYyEP+b8Y0fjz9p1+AbcCFl44f2H97l3f79qwdt0lSv6CJ02c+HT4m29K
+        BvTvH+vh3jfW0929AX37xvbv5xH7xuAhkjGjRz/znj798Yply+9s3bz5+IF9+zbfunFzzd3AwOmPHz12
+        IvlqfhcvcE8Dq6a5WCDpEBoSyvVonnSB/R8o7cRn6N8BkQAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAkAEBAAAAEAIABoBAAAlgAAABgYAAABACAAiAkAAP4EAAAgIAAAAQAgAKgQAACGDgAAMDAAAAEA
