--- a/M18AnalyzerMain.resx
+++ b/M18AnalyzerMain.resx
@@ -252,6 +252,12 @@ Step 4: Set Idle (Tx Low) before unplugging battery and/or disconnecting the ser
         IOkQGhLK9WiedIH9HyjtxGfo3wGRAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="toolTipSimpleTab.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>9, 21</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>40</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAkAEBAAAAEAIABoBAAAlgAAABgYAAABACAAiAkAAP4EAAAgIAAAAQAgAKgQAACGDgAAMDAAAAEA
